--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"express": "^5.1.0",
+		"express-ws": "^5.0.2"
 	}
 }
