--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 	"dependencies": {
 		"clsx": "^2.1.1",
 		"express": "^5.1.0",
-		"express-ws": "^5.0.2"
+		"express-ws": "^5.0.2",
+		"mqtt": "^5.14.0",
+		"uuid": "^11.1.0"
 	}
 }
