--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"clsx": "^2.1.1",
+		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"express-ws": "^5.0.2",
 		"mqtt": "^5.14.0",
